@@ -31,6 +31,7 @@ Improved CPC emulation:
 
 Improved Debug CPU Window:
 -Tell when a condition is satisfied or not
+-Detecting when doing a esxdos call, using the esxdos handler, and doing step over
 
 Improved Debug I/O ports window: can now be backgrounded and it's reloaded continuously
 Improved File spooling: delay can now be any value between 20 and 2000 ms (in increments of +20)
